--- a/board/stmicroelectronics/stm32mp1/optee-dts/stm32mp157d-dk1-mx.dts
+++ b/board/stmicroelectronics/stm32mp1/optee-dts/stm32mp157d-dk1-mx.dts
@@ -1,6 +1,6 @@
 // SPDX-License-Identifier: (GPL-2.0-or-later OR BSD-3-Clause)
 /*
- * Copyright (C) 2023, STMicroelectronics - All Rights Reserved
+ * Copyright (C) 2024, STMicroelectronics - All Rights Reserved
  * Author: STM32CubeMX code generation for STMicroelectronics.
  */
 
@@ -9,27 +9,30 @@
  */
 
 /dts-v1/;
+
 #include <dt-bindings/pinctrl/stm32-pinfunc.h>
 #include <dt-bindings/clock/stm32mp1-clksrc.h>
 #include <dt-bindings/soc/stm32mp15-etzpc.h>
-
 #include "stm32mp157.dtsi"
 #include "stm32mp15xd.dtsi"
 #include "stm32mp15xxac-pinctrl.dtsi"
 
 /* USER CODE BEGIN includes */
+#include "stm32mp15-pinctrl.dtsi"
 #include <dt-bindings/gpio/stm32mp_gpio.h>
 #include <dt-bindings/power/stm32mp1-power.h>
 #include <dt-bindings/mfd/st,stpmic1.h>
+#include <dt-bindings/soc/stm32mp-provisioning.h>
+#include <dt-bindings/tamper/st,stm32-tamp.h>
 /* USER CODE END includes */
 
 / {
-	model = "STMicroelectronics STM32MP157D-DK1 STM32CubeMX board - openstlinux-6.1-yocto-mickledore-mp1-v23.06.21";
+	model = "STMicroelectronics STM32MP157D-DK1 STM32CubeMX board - openstlinux-6.1-yocto-mickledore-mpu-v24.06.26";
 	compatible = "st,stm32mp157d-dk1-mx", "st,stm32mp157d-dk1", "st,stm32mp157";
 
 	memory@c0000000 {
 		device_type = "memory";
-		reg = <0xc0000000 0x20000000>;
+		reg = <0xc0000000 0x40000000>;
 
 		/* USER CODE BEGIN memory */
 		/* USER CODE END memory */
@@ -42,33 +45,21 @@
 
 		/* USER CODE BEGIN reserved-memory */
 
-		mcuram2:mcuram2@10000000{
+		mcusram1:mcuram@10000000{
 			compatible = "shared-dma-pool";
-			reg = <0x10000000 0x40000>;
+			reg = <0x10000000 0x20000>;
 			no-map;
 		};
 
-		vdev0vring0:vdev0vring0@10040000{
+		mcusram2:mcuram@10020000{
 			compatible = "shared-dma-pool";
-			reg = <0x10040000 0x1000>;
+			reg = <0x10020000 0x20000>;
 			no-map;
 		};
 
-		vdev0vring1:vdev0vring1@10041000{
+		mcusram3:mcuram@10040000{
 			compatible = "shared-dma-pool";
-			reg = <0x10041000 0x1000>;
-			no-map;
-		};
-
-		vdev0buffer:vdev0buffer@10042000{
-			compatible = "shared-dma-pool";
-			reg = <0x10042000 0x4000>;
-			no-map;
-		};
-
-		mcuram:mcuram@30000000{
-			compatible = "shared-dma-pool";
-			reg = <0x30000000 0x40000>;
+			reg = <0x10040000 0x10000>;
 			no-map;
 		};
 
@@ -101,6 +92,16 @@
 			gpios = <&gpiod 11 GPIO_ACTIVE_HIGH>;
 			linux,default-trigger = "heartbeat";
 			default-state = "off";
+		};
+	};
+
+	shadow-prov{
+		compatible = "st,provisioning";
+
+		hw2_prov{
+			nvmem-cells = <&hw2_otp>;
+			st,shadow-value = <0x000001E0>;
+			st,shadow-lock = <STICKY_LOCK_SR>;
 		};
 	};
 
@@ -147,6 +148,15 @@
 
 /*Warning: the configuration of the secured GPIOs should be added in (addons) User Section*/
 &pinctrl {
+	rcc_pins_mx: rcc_mx-0 {
+		pins {
+			pinmux = <STM32_PINMUX('C', 14, ANALOG)>, /* RCC_OSC32_IN */
+					 <STM32_PINMUX('C', 15, ANALOG)>, /* RCC_OSC32_OUT */
+					 <STM32_PINMUX('H', 0, ANALOG)>, /* RCC_OSC_IN */
+					 <STM32_PINMUX('H', 1, ANALOG)>; /* RCC_OSC_OUT */
+		};
+	};
+
 	/* USER CODE BEGIN pinctrl */
 
 	uart4_pins_mx: uart4_mx-0 {
@@ -522,6 +532,8 @@
 };
 
 &rcc{
+	pinctrl-names = "default";
+	pinctrl-0 = <&rcc_pins_mx>;
 	status = "okay";
 
 	/* USER CODE BEGIN rcc */
@@ -577,11 +589,6 @@
 			divmn = < 3 98 >;
 		};
 		/* USER CODE BEGIN rcc_st-pll_vco */
-
-		pll4_vco_600Mhz:pll2-vco-600Mhz{
-			src = <CLK_PLL4_HSE>;
-			divmn = <3 98>;
-		};
 		/* USER CODE END rcc_st-pll_vco */
 	};
 
@@ -627,6 +634,8 @@
 		/* USER CODE END pll4 */
 	};
 
+	/* USER CODE BEGIN rcc */
+	/* USER CODE END rcc */
 };
 
 &rng1{
@@ -647,7 +656,20 @@
 	status = "okay";
 
 	/* USER CODE BEGIN tamp */
+	st,tamp-passive-nb-sample = <4>;
+	st,tamp-passive-sample-clk-div = <16384>;
 	/* USER CODE END tamp */
+};
+
+&timers15{
+	status = "okay";
+
+	/* USER CODE BEGIN timers15 */
+
+	counter{
+		status = "okay";
+	};
+	/* USER CODE END timers15 */
 };
 
 /* USER CODE BEGIN addons */
@@ -671,14 +693,6 @@
 	};
 
 	hsi-calibration{
-		status = "okay";
-	};
-};
-
-&timers15{
-	status = "okay";
-
-	counter{
 		status = "okay";
 	};
 };
