--- a/board/stmicroelectronics/stm32mp1/tfa-dts/stm32mp157d-dk1-mx-fw-config.dts
+++ b/board/stmicroelectronics/stm32mp1/tfa-dts/stm32mp157d-dk1-mx-fw-config.dts
@@ -1,6 +1,6 @@
 // SPDX-License-Identifier: (GPL-2.0-or-later OR BSD-3-Clause)
 /*
- * Copyright (C) 2023, STMicroelectronics - All Rights Reserved
+ * Copyright (C) 2024, STMicroelectronics - All Rights Reserved
  * Author: STM32CubeMX code generation for STMicroelectronics.
  */
 
@@ -8,5 +8,5 @@
  * https://wiki.st.com/stm32mpu/wiki/Category:Device_tree_configuration
  */
 
-#define DDR_SIZE	0x20000000 /* 512MB */
+#define DDR_SIZE	0x40000000 /* 1GB */
 #include "stm32mp15-fw-config.dtsi"
