--- a/board/stmicroelectronics/stm32mp1/uboot-dts/stm32mp135f-dk-mx.dts
+++ b/board/stmicroelectronics/stm32mp1/uboot-dts/stm32mp135f-dk-mx.dts
@@ -1,6 +1,6 @@
 // SPDX-License-Identifier: (GPL-2.0-or-later OR BSD-3-Clause)
 /*
- * Copyright (C) 2023, STMicroelectronics - All Rights Reserved
+ * Copyright (C) 2024, STMicroelectronics - All Rights Reserved
  * Author: STM32CubeMX code generation for STMicroelectronics.
  */
 
@@ -9,8 +9,8 @@
  */
 
 /dts-v1/;
-#include <dt-bindings/pinctrl/stm32-pinfunc.h>
 
+#include <dt-bindings/pinctrl/stm32-pinfunc.h>
 #include "stm32mp135.dtsi"
 #include "stm32mp13xf.dtsi"
 
@@ -23,12 +23,12 @@
 /* USER CODE END includes */
 
 / {
-	model = "STMicroelectronics STM32MP135F-DK STM32CubeMX board - openstlinux-6.1-yocto-mickledore-mp1-v23.06.21";
+	model = "STMicroelectronics STM32MP135F-DK STM32CubeMX board - openstlinux-6.1-yocto-mickledore-mpu-v24.06.26";
 	compatible = "st,stm32mp135f-dk-mx", "st,stm32mp135f-dk", "st,stm32mp135";
 
 	memory@c0000000 {
 		device_type = "memory";
-		reg = <0xc0000000 0x20000000>;
+		reg = <0xc0000000 0x40000000>;
 
 		/* USER CODE BEGIN memory */
 		/* USER CODE END memory */
@@ -86,7 +86,7 @@
 		compatible = "gpio-leds";
 
 		led-blue{
-		    function = LED_FUNCTION_HEARTBEAT;
+			function = [A-Z]ED_FUNCTION_HEARTBEAT;
 			color = <LED_COLOR_ID_BLUE>;
 			gpios = <&gpioa 14 GPIO_ACTIVE_LOW>;
 			linux,default-trigger = "heartbeat";
@@ -98,7 +98,7 @@
 		compatible = "gpio-backlight";
 		gpios = <&gpioe 12 GPIO_ACTIVE_HIGH>;
 		default-on;
-		default-brightness-level = <0>;
+		default-brightness-level = <1>;
 		status = "okay";
 	};
 
@@ -392,13 +392,13 @@
 
 	rtc_pins_mx: rtc_mx-0 {
 		pins {
-			pinmux = <STM32_PINMUX('I', 1, ANALOG)>; /* RTC_LSCO_OUT2 */
+			pinmux = <STM32_PINMUX('I', 1, ANALOG)>; /* RTC_OUT2 */
 		};
 	};
 
 	rtc_sleep_pins_mx: rtc_sleep_mx-0 {
 		pins {
-			pinmux = <STM32_PINMUX('I', 1, ANALOG)>; /* RTC_LSCO_OUT2 */
+			pinmux = <STM32_PINMUX('I', 1, ANALOG)>; /* RTC_OUT2 */
 		};
 	};
 
@@ -505,7 +505,10 @@
 
 	uart4_idle_pins_mx: uart4_idle_mx-0 {
 		pins1 {
-			pinmux = <STM32_PINMUX('D', 6, ANALOG)>; /* UART4_TX */
+			pinmux = <STM32_PINMUX('D', 6, AF8)>; /* UART4_TX */
+			bias-disable;
+			drive-push-pull;
+			slew-rate = <0>;
 		};
 		pins2 {
 			pinmux = <STM32_PINMUX('D', 8, AF8)>; /* UART4_RX */
@@ -537,18 +540,16 @@
 
 	usart2_idle_pins_mx: usart2_idle_mx-0 {
 		pins1 {
-			pinmux = <STM32_PINMUX('D', 15, AF1)>; /* USART2_RX */
+			pinmux = <STM32_PINMUX('D', 15, AF1)>, /* USART2_RX */
+					 <STM32_PINMUX('E', 11, AF2)>; /* USART2_CTS */
 			bias-disable;
 		};
 		pins2 {
-			pinmux = <STM32_PINMUX('D', 4, AF3)>; /* USART2_RTS */
+			pinmux = <STM32_PINMUX('D', 4, AF3)>, /* USART2_RTS */
+					 <STM32_PINMUX('H', 12, AF1)>; /* USART2_TX */
 			bias-disable;
 			drive-push-pull;
 			slew-rate = <0>;
-		};
-		pins3 {
-			pinmux = <STM32_PINMUX('E', 11, ANALOG)>, /* USART2_CTS */
-					 <STM32_PINMUX('H', 12, ANALOG)>; /* USART2_TX */
 		};
 	};
 
@@ -868,7 +869,7 @@
 		pinctrl-names = "default";
 		pinctrl-0 = <&goodix_pins_a>;
 		interrupt-parent = <&gpiof>;
-		interrupts = <5 IRQ_TYPE_EDGE_FALLING>;
+		interrupts = <5 IRQ_TYPE_NONE>;
 		reset-gpios = <&gpioh 2 GPIO_ACTIVE_LOW>;
 		AVDD28-supply = <&scmi_v3v3_sw>;
 		VDDIO-supply = <&scmi_v3v3_sw>;
@@ -886,6 +887,7 @@
 	status = "okay";
 
 	/* USER CODE BEGIN ltdc */
+	default-on;
 
 	port{
 
@@ -946,6 +948,7 @@
 
 	/* USER CODE BEGIN sdmmc2 */
 	non-removable;
+	cap-sdio-irq;
 	st,neg-edge;
 	bus-width = <4>;
 	vmmc-supply = <&v3v3_ao>;
@@ -956,9 +959,6 @@
 	brcmf:bcrmf@1{
 		reg = <1>;
 		compatible = "brcm,bcm4329-fmac";
-		interrupt-parent = <&gpiof>;
-		interrupts = <0 IRQ_TYPE_LEVEL_HIGH>; /* WL_HOST_WAKE */
-		interrupt-names = "host-wake";
 	};
 	/* USER CODE END sdmmc2 */
 };
@@ -1088,42 +1088,42 @@
 
 &scmi_regu{
 
-	scmi_vddcpu:voltd-vddcpu{
+	scmi_vddcpu:regulator@6{
 		reg = <VOLTD_SCMI_STPMIC1_BUCK1>;
 		regulator-name = "vddcpu";
 	};
 
-	scmi_vdd:voltd-vdd{
+	scmi_vdd:regulator@8{
 		reg = <VOLTD_SCMI_STPMIC1_BUCK3>;
 		regulator-name = "vdd";
 	};
 
-	scmi_vddcore:voltd-vddcore{
+	scmi_vddcore:regulator@9{
 		reg = <VOLTD_SCMI_STPMIC1_BUCK4>;
 		regulator-name = "vddcore";
 	};
 
-	scmi_vdd_adc:voltd-vdd-adc{
+	scmi_vdd_adc:regulator@10{
 		reg = <VOLTD_SCMI_STPMIC1_LDO1>;
 		regulator-name = "vdd_adc";
 	};
 
-	scmi_vdd_usb:voltd-vdd-usb{
+	scmi_vdd_usb:regulator@13{
 		reg = <VOLTD_SCMI_STPMIC1_LDO4>;
 		regulator-name = "vdd_usb";
 	};
 
-	scmi_vdd_sd:voltd-vdd-sd{
+	scmi_vdd_sd:regulator@14{
 		reg = <VOLTD_SCMI_STPMIC1_LDO5>;
 		regulator-name = "vdd_sd";
 	};
 
-	scmi_v1v8_periph:voltd-v1v8-periph{
+	scmi_v1v8_periph:regulator@15{
 		reg = <VOLTD_SCMI_STPMIC1_LDO6>;
 		regulator-name = "v1v8_periph";
 	};
 
-	scmi_v3v3_sw:voltd-v3v3-sw{
+	scmi_v3v3_sw:regulator@19{
 		reg = <VOLTD_SCMI_STPMIC1_PWR_SW2>;
 		regulator-name = "v3v3_sw";
 	};
