--- a/board/stmicroelectronics/stm32mp1/uboot-dts/stm32mp157f-dk2-mx-u-boot.dtsi
+++ b/board/stmicroelectronics/stm32mp1/uboot-dts/stm32mp157f-dk2-mx-u-boot.dtsi
@@ -1,12 +1,15 @@
 // SPDX-License-Identifier: (GPL-2.0-or-later OR BSD-3-Clause)
 /*
- * Copyright (C) 2023, STMicroelectronics - All Rights Reserved
+ * Copyright (C) 2024, STMicroelectronics - All Rights Reserved
  * Author: STM32CubeMX code generation for STMicroelectronics.
  */
 
 /* For more information on Device Tree configuration, please refer to
  * https://wiki.st.com/stm32mpu/wiki/Category:Device_tree_configuration
  */
+
+/* !!! log : Internal error - unknown 'U-BOOT' dtsi  !!! */
+/*#include "???.dtsi"*/
 
 /* USER CODE BEGIN includes */
 #include "stm32mp15-scmi-u-boot.dtsi"
@@ -35,8 +38,6 @@
 		led-red{
 			label = "error";
 			gpios = <&gpioa 13 GPIO_ACTIVE_LOW>;
-			default-state = "off";
-			status = "okay";
 		};
 	};
 	/* USER CODE END root */
@@ -51,6 +52,10 @@
 
 &usbotg_hs{
 	u-boot,force-b-session-valid;
+};
+
+&sdmmc2{
+	status = "disabled";
 };
 
 &uart4_pins_mx {
