--- a/board/stmicroelectronics/stm32mp1/uboot-dts/stm32mp157f-dk2-mx.dts
+++ b/board/stmicroelectronics/stm32mp1/uboot-dts/stm32mp157f-dk2-mx.dts
@@ -1,6 +1,6 @@
 // SPDX-License-Identifier: (GPL-2.0-or-later OR BSD-3-Clause)
 /*
- * Copyright (C) 2023, STMicroelectronics - All Rights Reserved
+ * Copyright (C) 2024, STMicroelectronics - All Rights Reserved
  * Author: STM32CubeMX code generation for STMicroelectronics.
  */
 
@@ -9,8 +9,8 @@
  */
 
 /dts-v1/;
-#include <dt-bindings/pinctrl/stm32-pinfunc.h>
 
+#include <dt-bindings/pinctrl/stm32-pinfunc.h>
 #include "stm32mp157.dtsi"
 #include "stm32mp15xf.dtsi"
 #include "stm32mp15xxac-pinctrl.dtsi"
@@ -24,12 +24,12 @@
 /* USER CODE END includes */
 
 / {
-	model = "STMicroelectronics STM32MP157F-DK2 STM32CubeMX board - openstlinux-6.1-yocto-mickledore-mp1-v23.06.21";
+	model = "STMicroelectronics STM32MP157F-DK2 STM32CubeMX board - openstlinux-6.1-yocto-mickledore-mpu-v24.06.26";
 	compatible = "st,stm32mp157f-dk2-mx", "st,stm32mp157f-dk2", "st,stm32mp157";
 
 	memory@c0000000 {
 		device_type = "memory";
-		reg = <0xc0000000 0x20000000>;
+		reg = <0xc0000000 0x40000000>;
 
 		/* USER CODE BEGIN memory */
 		/* USER CODE END memory */
@@ -99,6 +99,19 @@
 		serial1 = &usart3;
 		serial2 = &uart7;
 		serial3 = &usart2;
+	};
+
+	hdmi:connector{
+		compatible = "hdmi-connector";
+		label = "hdmi";
+		type = "a";
+
+		port{
+
+			hdmi_connector_in:endpoint{
+				remote-endpoint = <&sii9022_out>;
+			};
+		};
 	};
 
 	led{
@@ -699,7 +712,7 @@
 	nvmem-cells = <&ethernet_mac_address>;
 	nvmem-cell-names = "mac-address";
 
-	mdio0{
+	mdio{
 		#address-cells = <1>;
 		#size-cells = <0>;
 		compatible = "snps,dwmac-mdio";
@@ -765,6 +778,14 @@
 
 				sii9022_in:endpoint{
 					remote-endpoint = <&ltdc_ep0_out>;
+				};
+			};
+
+			port@1{
+				reg = <1>;
+
+				sii9022_out:endpoint{
+					remote-endpoint = <&hdmi_connector_in>;
 				};
 			};
 
@@ -1001,11 +1022,6 @@
 			power-off-time-sec = <10>;
 			status = "okay";
 		};
-
-		watchdog{
-			compatible = "st,stpmic1-wdt";
-			status = "disabled";
-		};
 	};
 	/* USER CODE END i2c4 */
 };
@@ -1024,7 +1040,7 @@
 
 		i2s2_endpoint:endpoint{
 			remote-endpoint = <&sii9022_tx_endpoint>;
-			format = "i2s";
+			dai-format = "i2s";
 			mclk-fs = <256>;
 		};
 	};
@@ -1042,6 +1058,7 @@
 	status = "okay";
 
 	/* USER CODE BEGIN ltdc */
+	default-on;
 
 	port{
 		#address-cells = <1>;
@@ -1172,6 +1189,7 @@
 
 	/* USER CODE BEGIN sdmmc2 */
 	non-removable;
+	cap-sdio-irq;
 	st,neg-edge;
 	bus-width = <4>;
 	vmmc-supply = <&v3v3>;
@@ -1182,9 +1200,6 @@
 	brcmf:bcrmf@1{
 		reg = <1>;
 		compatible = "brcm,bcm4329-fmac";
-		interrupt-parent = <&gpiod>;
-		interrupts = <0 IRQ_TYPE_LEVEL_HIGH>; /* WL_HOST_WAKE */
-		interrupt-names = "host-wake";
 	};
 	/* USER CODE END sdmmc2 */
 };
@@ -1331,16 +1346,6 @@
 
 &cpu1{
 	cpu-supply = <&vddcore>;
-};
-
-&pinctrl{
-	stusb1600_pins_a:stusb1600-0{
-
-		pins{
-			bias-pull-up;
-			pinmux = <STM32_PINMUX('I', 11, GPIO)>;
-		};
-	};
 };
 
 &usbh_ohci{
