--- a/board/stmicroelectronics/stm32mp1/tfa-dts/stm32mp13-mx.dtsi
+++ b/board/stmicroelectronics/stm32mp1/tfa-dts/stm32mp13-mx.dtsi
@@ -1,7 +1,7 @@
 /*
  * Copyright (C) 2015-2018, STMicroelectronics - All Rights Reserved
  *
- * SPDX-License-Identifier:	GPL-2.0+	BSD-3-Clause
+ * SPDX-License-Identifier:	GPL-2.0-or-later	BSD-3-Clause
  *
  */
 
@@ -14,12 +14,12 @@
  * Relaxed Timing Mode: false
  * Address mapping type: RBC
  *
- * Save Date: 2023.06.28, save Time: 09:25:08
+ * Save Date: 2024.06.26, save Time: 11:20:07
  */
 
-#define DDR_MEM_NAME	"DDR3-DDR3L 16bits 533000kHz"
-#define DDR_MEM_SPEED	533000
-#define DDR_MEM_SIZE	0x20000000
+#define DDR_MEM_NAME "DDR3-DDR3L 16bits 533000kHz"
+#define DDR_MEM_SPEED 533000
+#define DDR_MEM_SIZE 0x20000000
 
 #define DDR_MSTR 0x00040401
 #define DDR_MRCTRL0 0x00000010
