--- a/board/stmicroelectronics/stm32mp1/uboot-dts/stm32mp157d-dk1-mx.dts
+++ b/board/stmicroelectronics/stm32mp1/uboot-dts/stm32mp157d-dk1-mx.dts
@@ -1,6 +1,6 @@
 // SPDX-License-Identifier: (GPL-2.0-or-later OR BSD-3-Clause)
 /*
- * Copyright (C) 2023, STMicroelectronics - All Rights Reserved
+ * Copyright (C) 2024, STMicroelectronics - All Rights Reserved
  * Author: STM32CubeMX code generation for STMicroelectronics.
  */
 
@@ -9,8 +9,8 @@
  */
 
 /dts-v1/;
-#include <dt-bindings/pinctrl/stm32-pinfunc.h>
 
+#include <dt-bindings/pinctrl/stm32-pinfunc.h>
 #include "stm32mp157.dtsi"
 #include "stm32mp15xd.dtsi"
 #include "stm32mp15xxac-pinctrl.dtsi"
@@ -23,7 +23,7 @@
 /* USER CODE END includes */
 
 / {
-	model = "STMicroelectronics STM32MP157D-DK1 STM32CubeMX board - openstlinux-6.1-yocto-mickledore-mp1-v23.06.21";
+	model = "STMicroelectronics STM32MP157D-DK1 STM32CubeMX board - openstlinux-6.1-yocto-mickledore-mpu-v24.06.26";
 	compatible = "st,stm32mp157d-dk1-mx", "st,stm32mp157d-dk1", "st,stm32mp157";
 
 	memory@c0000000 {
@@ -97,6 +97,19 @@
 		serial0 = &uart4;
 		serial1 = &usart3;
 		serial2 = &uart7;
+	};
+
+	hdmi:connector{
+		compatible = "hdmi-connector";
+		label = "hdmi";
+		type = "a";
+
+		port{
+
+			hdmi_connector_in:endpoint{
+				remote-endpoint = <&sii9022_out>;
+			};
+		};
 	};
 
 	led{
@@ -599,7 +612,7 @@
 	nvmem-cells = <&ethernet_mac_address>;
 	nvmem-cell-names = "mac-address";
 
-	mdio0{
+	mdio{
 		#address-cells = <1>;
 		#size-cells = <0>;
 		compatible = "snps,dwmac-mdio";
@@ -665,6 +678,14 @@
 
 				sii9022_in:endpoint{
 					remote-endpoint = <&ltdc_ep0_out>;
+				};
+			};
+
+			port@1{
+				reg = <1>;
+
+				sii9022_out:endpoint{
+					remote-endpoint = <&hdmi_connector_in>;
 				};
 			};
 
@@ -887,11 +908,6 @@
 			power-off-time-sec = <10>;
 			status = "okay";
 		};
-
-		watchdog{
-			compatible = "st,stpmic1-wdt";
-			status = "disabled";
-		};
 	};
 	/* USER CODE END i2c4 */
 };
@@ -910,7 +926,7 @@
 
 		i2s2_endpoint:endpoint{
 			remote-endpoint = <&sii9022_tx_endpoint>;
-			format = "i2s";
+			dai-format = "i2s";
 			mclk-fs = <256>;
 		};
 	};
